--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>12.0.1</source>
+                    <target>12.0.1</target>
+                    <argLine>-Xmx6g</argLine>
                 </configuration>
             </plugin>
         </plugins>
